the gaps are almost working

--- a/timetable.tex
+++ b/timetable.tex
@@ -73,6 +73,8 @@
 \pagenumbering{gobble}
 
 \input{vars.tex}
+\blockAmountPerIpaDay
+\hiddnRestColls
 \begin{table}[]\label{my-label}
 \begin{Timetable}{tabular}{W W R R W W R W W R R W W R R W}
 \colorGray
@@ -84,14 +86,14 @@
 \task{Aufgabe 2}{6}{2}
 %\EndSprint{Sprint 1}
 %\StartSprint\colorRed
-\task{Aufgabe 3}{9}{2}
+\task{Aufgabe 3}{7}{2}
 \task{Aufgabe 4}{4}{2}
-\task{Aufgabe 5}{4}{2}
-\task{Aufgabe 6}{4}{2}
+%\task{Aufgabe 5}{4}{2}
+%\task{Aufgabe 6}{4}{2}
 %\EndSprint{Sprint 2}
 
 \end{Timetable}
 \end{table}
-
+\blockAmountPerIpaDay
 
 \end{document} 
