--- a/tex3.tex
+++ b/tex3.tex
@@ -56,7 +56,6 @@
     {
       \Repeat{\blockAmountPerIpaDay}{\addtocounter{#1}{1}&}
     }
-
     &\coloredCell{#1}{#2}{#3}
     \addtocounter{#1}{\number#2}
 }
@@ -77,19 +76,18 @@
     \int_compare:nNnT {\arabic{##1}} > {0} {
       \emptycells{\arabic{##1}}
     }
-    
 
     \int_do_until:nNnn {\g_drawn_slots} = {\g_slots_to_draw} {
       \blocksTilNextRest{##1}
       \int_compare:nTF {\g_slots_to_draw > \g_till_next_rest}
       {
         \int_gset:Nn\g_slots_to_be_drawn{\int_eval:n{\g_slots_to_draw -(\g_slots_to_draw -\g_till_next_rest)}}
-        \int_use:N\g_slots_to_be_drawn
+        %\int_use:N\g_slots_to_be_drawn
         \timeslotItem{##1}{\expandafter\int_use:N \g_slots_to_be_drawn}{##2}
         \int_gset:Nn\g_slots_to_draw{\int_eval:n{\g_slots_to_draw -\g_slots_to_be_drawn}}
       }
       {
-        \timeslotItem{##1}{\int_use:N \g_slots_to_draw}{##2}
+        \timeslotItem{##1}{\expandafter\int_use:N \g_slots_to_draw}{##2}
         \int_gzero:N\g_slots_to_draw
       }
     }
@@ -103,8 +101,7 @@
   \newcouterinit{till_next_rest}
   \int_new:N \g_till_next_rest
   \cs_gset:Npn \blocksTilNextRest ##1{
-    \int_gset:Nn \g_till_next_rest {\arabic{##1}}
-  
+    \int_gset:Nn \g_till_next_rest {0}
     \bool_while_do:nn
     {
       \str_compare_p:eNe { \getDay{\number\numexpr\arabic{##1} + \g_till_next_rest\relax} } = { W }
@@ -112,6 +109,8 @@
     {
       \int_gset:Nn \g_till_next_rest {\int_eval:n { \g_till_next_rest + 1 }}
     }
+    %\int_gset:Nn \g_till_next_rest {\int_eval:n { \g_till_next_rest - 1 }}
+
   }
 }
 
