--- a/timetable.tex
+++ b/timetable.tex
@@ -67,6 +67,7 @@
 \newcolumntype{I}{!{\thickvrule}c!{\thickvrule}}
 \newcolumntype{W}{*{\blockAmountPerIpaDay}{@{}p{0.5cm}@{}!{\bluevrule}}@{}|}
 \newcolumntype{R}{@{}>{\columncolor{Gray}}C{5mm}@{}*{\hiddnRestColls}{H}@{}!{\bluevrule}}
+%\newcolumntype{R}{@{}>{}C{5mm}@{}*{\hiddnRestColls}{H}@{}!{\bluevrule}}
 
 \begin{document}
 \setlength\Lstackgap{1cm}
@@ -87,6 +88,9 @@
 %\EndSprint{Sprint 1}
 %\StartSprint\colorRed
 \task{Aufgabe 3}{7}{2}
+\task{Aufgabe 4}{4}{2}
+\task{Aufgabe 4}{4}{2}
+\task{Aufgabe 4}{4}{2}
 \task{Aufgabe 4}{4}{2}
 %\task{Aufgabe 5}{4}{2}
 %\task{Aufgabe 6}{4}{2}
