--- a/timetable.tex
+++ b/timetable.tex
@@ -79,22 +79,22 @@
 \begin{table}[]\label{my-label}
 \begin{Timetable}{tabular}{W W R R W W R W W R R W W R R W}
 \colorGray
-%\task{Keine IPA}{4}{4}
+\task{Keine IPA}{4}{4}
 
 
 \StartSprint\colorBlue%
 \task{Aufgabe 1}{4}{2}
 \task{Aufgabe 2}{6}{2}
-%\EndSprint{Sprint 1}
-%\StartSprint\colorRed
+\EndSprint{Sprint 1}
+\StartSprint\colorRed
 \task{Aufgabe 3}{7}{2}
 \task{Aufgabe 4}{4}{2}
 \task{Aufgabe 4}{4}{2}
 \task{Aufgabe 4}{4}{2}
 \task{Aufgabe 4}{4}{2}
-%\task{Aufgabe 5}{4}{2}
-%\task{Aufgabe 6}{4}{2}
-%\EndSprint{Sprint 2}
+\task{Aufgabe 5}{4}{2}
+\task{Aufgabe 6}{4}{2}
+\EndSprint{Sprint 2}
 
 \end{Timetable}
 \end{table}
