temp disable sprint drawing

--- a/commands.tex
+++ b/commands.tex
@@ -56,11 +56,11 @@
 
 
 
-\newcommand{\EndSprint}[1]{
+\newcommand{\EndSprint}[2]{
   \taskText{#1}
-  \sprint{sprintPlannedHoursBase}{sprintPlannedHours}
+  % \sprint{currentPlannedHours}{sprintPlannedHours}
   \\
-  \sprint{sprintDoneHoursBase}{sprintDoneHours}
+  % \sprint{currentDoneHours}{sprintDoneHours}
   \\\hline
 }
 
