--- a/timetable.tex
+++ b/timetable.tex
@@ -82,19 +82,20 @@
 \task{Keine IPA}{4}{4}
 
 
-\StartSprint\colorBlue%
+\StartSprint
+\colorBlue%
 \task{Aufgabe 1}{4}{2}
-\task{Aufgabe 2}{6}{2}
+\task{Aufgabe 2}{5}{2}
 \EndSprint{Sprint 1}
-\StartSprint\colorRed
+\colorRed
 \task{Aufgabe 3}{7}{2}
 \task{Aufgabe 4}{4}{2}
-\task{Aufgabe 4}{4}{2}
-\task{Aufgabe 4}{4}{2}
-\task{Aufgabe 4}{4}{2}
-\task{Aufgabe 5}{4}{2}
-\task{Aufgabe 6}{4}{2}
-\EndSprint{Sprint 2}
+% \task{Aufgabe 4}{4}{2}
+% \task{Aufgabe 4}{4}{2}
+% \task{Aufgabe 4}{4}{2}
+% \task{Aufgabe 5}{4}{2}
+% \task{Aufgabe 6}{4}{2}
+\EndSprint{Sprint 2}{5}
 
 \end{Timetable}
 \end{table}
